--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <h1>@unional/events-plus <!-- omit in toc --></h1>
 </a>
 <p><a href="https://npmjs.org/package/@unional/events-plus"><img src="https://img.shields.io/npm/v/@unional/events-plus.svg?style=flat" alt="NPM version"></a>
-<a href="https://npmjs.org/package/events-plus"><img src="https://img.shields.io/npm/dm/events-plus.svg?style=flat" alt="NPM downloads"></a></p>
+<a href="https://npmjs.org/package/@unional/events-plus"><img src="https://img.shields.io/npm/dm/@unional/events-plus.svg?style=flat" alt="NPM downloads"></a></p>
 <p><a href="https://github.com/unional/events-plus/actions"><img src="https://github.com/unional/events-plus/workflows/nodejs/badge.svg" alt="GitHub NodeJS"></a>
 <a href="https://codecov.io/gh/unional/events-plus"><img src="https://codecov.io/gh/unional/events-plus/branch/master/graph/badge.svg" alt="Codecov"></a></p>
 <p><a href="https://github.com/semantic-release/semantic-release"><img src="https://img.shields.io/badge/%20%20%F0%9F%93%A6%F0%9F%9A%80-semantic--release-e10079.svg" alt="Semantic Release"></a></p>
