deploy: 570349c1abddf0b53c86da35603b1e724902397b

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <p><a href="https://github.com/semantic-release/semantic-release"><img src="https://img.shields.io/badge/%20%20%F0%9F%93%A6%F0%9F%9A%80-semantic--release-e10079.svg" alt="Semantic Release"></a></p>
 <p><a href="https://code.visualstudio.com/"><img src="https://img.shields.io/badge/vscode-ready-green.svg" alt="Visual Studio Code"></a></p>
 <p>Provides additional features to event emitters.</p>
-<p>Supports the following emitters:</p>
+<p>Should support any event emitters,
+especially the following:</p>
 <ul>
 <li><a href="https://www.npmjs.com/package/events">events</a></li>
 <li><a href="https://www.npmjs.com/package/eventemitter2">eventemitter2</a></li>
