--- a/index.html
+++ b/index.html
@@ -1,19 +1,76 @@
-<!DOCTYPE html><html class="default"><head><meta charSet="utf-8"/><meta http-equiv="x-ua-compatible" content="IE=edge"/><title>@unional/events-plus</title><meta name="description" content="Documentation for @unional/events-plus"/><meta name="viewport" content="width=device-width, initial-scale=1"/><link rel="stylesheet" href="assets/style.css"/><link rel="stylesheet" href="assets/highlight.css"/><script async src="assets/search.js" id="search-script"></script></head><body><script>document.documentElement.dataset.theme = localStorage.getItem("tsd-theme") || "os"</script><header class="tsd-page-toolbar">
+<!DOCTYPE html><html class="default" lang="en"><head><meta charSet="utf-8"/><meta http-equiv="x-ua-compatible" content="IE=edge"/><title>@unional/events-plus</title><meta name="description" content="Documentation for @unional/events-plus"/><meta name="viewport" content="width=device-width, initial-scale=1"/><link rel="stylesheet" href="assets/style.css"/><link rel="stylesheet" href="assets/highlight.css"/><script async src="assets/search.js" id="search-script"></script></head><body><script>document.documentElement.dataset.theme = localStorage.getItem("tsd-theme") || "os"</script><header class="tsd-page-toolbar">
 <div class="tsd-toolbar-contents container">
 <div class="table-cell" id="tsd-search" data-base=".">
-<div class="field"><label for="tsd-search-field" class="tsd-widget search no-caption"><svg width="16" height="16" viewBox="0 0 16 16" fill="none"><path d="M15.7824 13.833L12.6666 10.7177C12.5259 10.5771 12.3353 10.499 12.1353 10.499H11.6259C12.4884 9.39596 13.001 8.00859 13.001 6.49937C13.001 2.90909 10.0914 0 6.50048 0C2.90959 0 0 2.90909 0 6.49937C0 10.0896 2.90959 12.9987 6.50048 12.9987C8.00996 12.9987 9.39756 12.4863 10.5008 11.6239V12.1332C10.5008 12.3332 10.5789 12.5238 10.7195 12.6644L13.8354 15.7797C14.1292 16.0734 14.6042 16.0734 14.8948 15.7797L15.7793 14.8954C16.0731 14.6017 16.0731 14.1267 15.7824 13.833ZM6.50048 10.499C4.29094 10.499 2.50018 8.71165 2.50018 6.49937C2.50018 4.29021 4.28781 2.49976 6.50048 2.49976C8.71001 2.49976 10.5008 4.28708 10.5008 6.49937C10.5008 8.70852 8.71314 10.499 6.50048 10.499Z" fill="var(--color-text)"></path></svg></label><input type="text" id="tsd-search-field" aria-label="Search"/></div>
+<div class="field"><label for="tsd-search-field" class="tsd-widget tsd-toolbar-icon search no-caption"><svg width="16" height="16" viewBox="0 0 16 16" fill="none"><path d="M15.7824 13.833L12.6666 10.7177C12.5259 10.5771 12.3353 10.499 12.1353 10.499H11.6259C12.4884 9.39596 13.001 8.00859 13.001 6.49937C13.001 2.90909 10.0914 0 6.50048 0C2.90959 0 0 2.90909 0 6.49937C0 10.0896 2.90959 12.9987 6.50048 12.9987C8.00996 12.9987 9.39756 12.4863 10.5008 11.6239V12.1332C10.5008 12.3332 10.5789 12.5238 10.7195 12.6644L13.8354 15.7797C14.1292 16.0734 14.6042 16.0734 14.8948 15.7797L15.7793 14.8954C16.0731 14.6017 16.0731 14.1267 15.7824 13.833ZM6.50048 10.499C4.29094 10.499 2.50018 8.71165 2.50018 6.49937C2.50018 4.29021 4.28781 2.49976 6.50048 2.49976C8.71001 2.49976 10.5008 4.28708 10.5008 6.49937C10.5008 8.70852 8.71314 10.499 6.50048 10.499Z" fill="var(--color-text)"></path></svg></label><input type="text" id="tsd-search-field" aria-label="Search"/></div>
+<div class="field">
+<div id="tsd-toolbar-links"></div></div>
 <ul class="results">
 <li class="state loading">Preparing search index...</li>
 <li class="state failure">The search index is not available</li></ul><a href="https://github.com/unional/events-plus" class="title">Provides additional features to event emitters</a></div>
-<div class="table-cell" id="tsd-widgets"><a href="#" class="tsd-widget menu no-caption" data-toggle="menu" aria-label="Menu"><svg width="16" height="16" viewBox="0 0 16 16" fill="none"><rect x="1" y="3" width="14" height="2" fill="var(--color-text)"></rect><rect x="1" y="7" width="14" height="2" fill="var(--color-text)"></rect><rect x="1" y="11" width="14" height="2" fill="var(--color-text)"></rect></svg></a></div></div></header>
+<div class="table-cell" id="tsd-widgets"><a href="#" class="tsd-widget tsd-toolbar-icon menu no-caption" data-toggle="menu" aria-label="Menu"><svg width="16" height="16" viewBox="0 0 16 16" fill="none"><rect x="1" y="3" width="14" height="2" fill="var(--color-text)"></rect><rect x="1" y="7" width="14" height="2" fill="var(--color-text)"></rect><rect x="1" y="11" width="14" height="2" fill="var(--color-text)"></rect></svg></a></div></div></header>
 <div class="container container-main">
 <div class="col-8 col-content">
 <div class="tsd-page-title">
 <h2>@unional/events-plus</h2></div>
 <div class="tsd-panel tsd-typography">
-<a href="#" id="" style="color: inherit; text-decoration: none;">
-  <h1></h1>
+<a href="#unionalevents-plus-" id="unionalevents-plus-" style="color: inherit; text-decoration: none;">
+  <h1>@unional/events-plus <!-- omit in toc --></h1>
 </a>
+<p><a href="https://npmjs.org/package/@unional/events-plus"><img src="https://img.shields.io/npm/v/@unional/events-plus.svg?style=flat" alt="NPM version"></a>
+<a href="https://npmjs.org/package/@unional/events-plus"><img src="https://img.shields.io/npm/dm/@unional/events-plus.svg?style=flat" alt="NPM downloads"></a></p>
+<p><a href="https://github.com/unional/events-plus/actions"><img src="https://github.com/unional/events-plus/workflows/nodejs/badge.svg" alt="GitHub NodeJS"></a>
+<a href="https://codecov.io/gh/unional/events-plus"><img src="https://codecov.io/gh/unional/events-plus/branch/master/graph/badge.svg" alt="Codecov"></a></p>
+<p><a href="https://github.com/semantic-release/semantic-release"><img src="https://img.shields.io/badge/%20%20%F0%9F%93%A6%F0%9F%9A%80-semantic--release-e10079.svg" alt="Semantic Release"></a></p>
+<p><a href="https://code.visualstudio.com/"><img src="https://img.shields.io/badge/vscode-ready-green.svg" alt="Visual Studio Code"></a></p>
+<p>Provides additional features to event emitters.</p>
+<p>Should support any event emitters.
+Tested with the following:</p>
+<ul>
+<li><a href="https://www.npmjs.com/package/events">events</a></li>
+<li><a href="https://www.npmjs.com/package/eventemitter2">eventemitter2</a></li>
+<li><a href="https://www.npmjs.com/package/eventemitter3">eventemitter3</a></li>
+<li><a href="https://www.npmjs.com/package/fbemitter">fbemitter</a></li>
+<li><a href="https://developer.mozilla.org/en-US/docs/Web/API/EventTarget">EventTarget</a></li>
+</ul>
+
+<a href="#installation-" id="installation-" style="color: inherit; text-decoration: none;">
+  <h2>Installation <!-- omit in toc --></h2>
+</a>
+<pre><code class="language-sh"><span class="hl-0"># npm</span><br/><span class="hl-1">npm install @unional/events-plus</span><br/><br/><span class="hl-0"># yarn</span><br/><span class="hl-1">yarn add @unional/events-plus</span><br/><br/><span class="hl-0"># pnpm</span><br/><span class="hl-1">pnpm install @unional/events-plus</span><br/><br/><span class="hl-0">#rush</span><br/><span class="hl-1">rush add -p @unional/events-plus</span>
+</code></pre>
+
+<a href="#features-" id="features-" style="color: inherit; text-decoration: none;">
+  <h2>features <!-- omit in toc --></h2>
+</a>
+<ul>
+<li><a href="#justevent">JustEvent</a></li>
+<li><a href="#traperror">trapError</a></li>
+</ul>
+
+<a href="#justevent" id="justevent" style="color: inherit; text-decoration: none;">
+  <h3>JustEvent</h3>
+</a>
+<p><a href="https://github.com/unional/events-plus/blob/main/ts/justEvent.ts"><code>justEvent()</code></a> creates typed event with <a href="https://github.com/justland/just-func-typescript">just-func</a> semantics.
+It makes consuming and emitting events with parameters much easier.</p>
+<pre><code class="language-ts"><span class="hl-2">import</span><span class="hl-1"> { </span><span class="hl-3">justEvent</span><span class="hl-1"> } </span><span class="hl-2">from</span><span class="hl-1"> </span><span class="hl-4">&#39;@unional/events-plus&#39;</span><br/><span class="hl-2">import</span><span class="hl-1"> { </span><span class="hl-3">EventEmitter</span><span class="hl-1"> } </span><span class="hl-2">from</span><span class="hl-1"> </span><span class="hl-4">&#39;EventEmitter3&#39;</span><br/><br/><span class="hl-5">const</span><span class="hl-1"> </span><span class="hl-6">count</span><span class="hl-1"> = </span><span class="hl-7">justEvent</span><span class="hl-1">&lt;</span><span class="hl-8">number</span><span class="hl-1">&gt;(</span><span class="hl-4">&#39;count&#39;</span><span class="hl-1">)</span><br/><span class="hl-5">const</span><span class="hl-1"> </span><span class="hl-6">emitter</span><span class="hl-1"> = </span><span class="hl-5">new</span><span class="hl-1"> </span><span class="hl-7">EventEmitter</span><span class="hl-1">()</span><br/><br/><span class="hl-3">emitter</span><span class="hl-1">.</span><span class="hl-7">addListener</span><span class="hl-1">(</span><span class="hl-3">count</span><span class="hl-1">.</span><span class="hl-3">type</span><span class="hl-1">, </span><span class="hl-3">count</span><span class="hl-1">.</span><span class="hl-7">listener</span><span class="hl-1">(</span><span class="hl-3">value</span><span class="hl-1"> </span><span class="hl-5">=&gt;</span><span class="hl-1"> </span><span class="hl-7">expect</span><span class="hl-1">(</span><span class="hl-3">value</span><span class="hl-1">).</span><span class="hl-7">toBe</span><span class="hl-1">(</span><span class="hl-9">1</span><span class="hl-1">)))</span><br/><br/><span class="hl-3">emitter</span><span class="hl-1">.</span><span class="hl-7">emit</span><span class="hl-1">(</span><span class="hl-3">count</span><span class="hl-1">.</span><span class="hl-3">type</span><span class="hl-1">, ...</span><span class="hl-7">count</span><span class="hl-1">(</span><span class="hl-9">1</span><span class="hl-1">))</span><br/><br/><span class="hl-0">// or</span><br/><span class="hl-3">count</span><span class="hl-1">.</span><span class="hl-7">listenTo</span><span class="hl-1">(</span><span class="hl-3">emitter</span><span class="hl-1">, </span><span class="hl-3">value</span><span class="hl-1"> </span><span class="hl-5">=&gt;</span><span class="hl-1"> </span><span class="hl-7">expect</span><span class="hl-1">(</span><span class="hl-3">value</span><span class="hl-1">).</span><span class="hl-7">toBe</span><span class="hl-1">(</span><span class="hl-9">1</span><span class="hl-1">))</span><br/><span class="hl-3">count</span><span class="hl-1">.</span><span class="hl-7">emitBy</span><span class="hl-1">(</span><span class="hl-3">emitter</span><span class="hl-1">, </span><span class="hl-9">1</span><span class="hl-1">)</span>
+</code></pre>
+<p>You can also create the event with a default listener:</p>
+<pre><code class="language-ts"><span class="hl-2">import</span><span class="hl-1"> { </span><span class="hl-3">justEvent</span><span class="hl-1"> } </span><span class="hl-2">from</span><span class="hl-1"> </span><span class="hl-4">&#39;@unional/events-plus&#39;</span><br/><span class="hl-2">import</span><span class="hl-1"> { </span><span class="hl-3">EventEmitter</span><span class="hl-1"> } </span><span class="hl-2">from</span><span class="hl-1"> </span><span class="hl-4">&#39;EventEmitter3&#39;</span><br/><br/><span class="hl-5">let</span><span class="hl-1"> </span><span class="hl-3">total</span><span class="hl-1"> = </span><span class="hl-9">0</span><br/><span class="hl-5">const</span><span class="hl-1"> </span><span class="hl-6">sum</span><span class="hl-1"> = </span><span class="hl-7">justEvent</span><span class="hl-1">(</span><span class="hl-4">&#39;sum&#39;</span><span class="hl-1">, (</span><span class="hl-3">value</span><span class="hl-1">: </span><span class="hl-8">number</span><span class="hl-1">) </span><span class="hl-5">=&gt;</span><span class="hl-1"> </span><span class="hl-3">total</span><span class="hl-1"> +=</span><span class="hl-3">value</span><span class="hl-1">)</span><br/><br/><span class="hl-5">const</span><span class="hl-1"> </span><span class="hl-6">emitter</span><span class="hl-1"> = </span><span class="hl-5">new</span><span class="hl-1"> </span><span class="hl-7">EventEmitter</span><span class="hl-1">()</span><br/><span class="hl-3">emitter</span><span class="hl-1">.</span><span class="hl-7">addListener</span><span class="hl-1">(</span><span class="hl-3">sum</span><span class="hl-1">.</span><span class="hl-3">type</span><span class="hl-1">, </span><span class="hl-3">sum</span><span class="hl-1">.</span><span class="hl-3">defaultListener</span><span class="hl-1">)</span>
+</code></pre>
+
+<a href="#traperror" id="traperror" style="color: inherit; text-decoration: none;">
+  <h3>trapError</h3>
+</a>
+<p><a href="https://github.com/unional/events-plus/blob/main/ts/trapError.ts"><code>trapError()</code></a> will trap any error thrown in the listener and emit it to the <code>logger</code>.
+This prevents the emitter workflow interrupted by rouge listeners.</p>
+<p>The <code>logger</code> is defaulted to <code>console.error()</code>,
+but you can override that to anything else.</p>
+<pre><code class="language-ts"><span class="hl-2">import</span><span class="hl-1"> { </span><span class="hl-3">trapError</span><span class="hl-1"> } </span><span class="hl-2">from</span><span class="hl-1"> </span><span class="hl-4">&#39;@unional/events-plus&#39;</span><br/><span class="hl-2">import</span><span class="hl-1"> { </span><span class="hl-3">EventEmitter</span><span class="hl-1"> } </span><span class="hl-2">from</span><span class="hl-1"> </span><span class="hl-4">&#39;events&#39;</span><br/><br/><span class="hl-5">const</span><span class="hl-1"> </span><span class="hl-6">emitter</span><span class="hl-1"> = </span><span class="hl-7">trapError</span><span class="hl-1">(</span><span class="hl-5">new</span><span class="hl-1"> </span><span class="hl-7">EventEmitter</span><span class="hl-1">()) </span><span class="hl-0">// or `trapError(emitter, { logger })`</span><br/><span class="hl-3">emitter</span><span class="hl-1">.</span><span class="hl-7">on</span><span class="hl-1">(</span><span class="hl-4">&#39;work&#39;</span><span class="hl-1">, () </span><span class="hl-5">=&gt;</span><span class="hl-1"> { </span><span class="hl-2">throw</span><span class="hl-1"> </span><span class="hl-5">new</span><span class="hl-1"> </span><span class="hl-7">Error</span><span class="hl-1">(</span><span class="hl-4">&#39;missed deadline&#39;</span><span class="hl-1">) })</span><br/><span class="hl-3">emitter</span><span class="hl-1">.</span><span class="hl-7">emit</span><span class="hl-1">(</span><span class="hl-4">&#39;work&#39;</span><span class="hl-1">) </span><span class="hl-0">// no error is thrown.</span>
+</code></pre>
+<p><code>errorTrapper()</code> creates your own <code>trapError()</code> with specific <code>logger</code>
+You can then use it on multiple emitters.</p>
+<pre><code class="language-ts"><span class="hl-2">import</span><span class="hl-1"> { </span><span class="hl-3">errorTrapper</span><span class="hl-1"> } </span><span class="hl-2">from</span><span class="hl-1"> </span><span class="hl-4">&#39;@unional/events-plus&#39;</span><br/><span class="hl-2">import</span><span class="hl-1"> { </span><span class="hl-3">EventEmitter</span><span class="hl-1"> } </span><span class="hl-2">from</span><span class="hl-1"> </span><span class="hl-4">&#39;eventemitter3&#39;</span><br/><span class="hl-2">import</span><span class="hl-1"> { </span><span class="hl-3">getLogger</span><span class="hl-1"> } </span><span class="hl-2">from</span><span class="hl-1"> </span><span class="hl-4">&#39;standard-log&#39;</span><br/><br/><span class="hl-5">const</span><span class="hl-1"> </span><span class="hl-6">yourTrapError</span><span class="hl-1"> = </span><span class="hl-7">errorTrapper</span><span class="hl-1">(</span><span class="hl-7">getLogger</span><span class="hl-1">(</span><span class="hl-4">&#39;emitter&#39;</span><span class="hl-1">))</span><br/><span class="hl-5">const</span><span class="hl-1"> </span><span class="hl-6">emitter</span><span class="hl-1"> = </span><span class="hl-7">yourTrapError</span><span class="hl-1">(</span><span class="hl-5">new</span><span class="hl-1"> </span><span class="hl-7">EventEmitter</span><span class="hl-1">())</span><br/><span class="hl-1">...</span>
+</code></pre>
 </div></div>
 <div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 <div class="tsd-navigation settings">
@@ -50,5 +107,5 @@
 <li class="tsd-kind-function"><a href="functions/justEvent.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg>just<wbr/>Event</a></li>
 <li class="tsd-kind-function"><a href="functions/trapError.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-64-path"></use><use href="#icon-64-text"></use></svg>trap<wbr/>Error</a></li></ul></nav></div></div>
 <div class="container tsd-generator">
-<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p></div>
+<p style="line-height: 28px;">Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p></div>
 <div class="overlay"></div><script src="assets/main.js"></script></body></html>
